--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -15,6 +15,8 @@ coturn_metrics_enabled: false
 coturn_fingerprint_enabled: false
 coturn_domain: 'turn.example.org'
 coturn_external_ip: '{{ ansible_host }}'
+coturn_metrics_enabled: false
+coturn_metrics_port: 9641
 coturn_min_port: 49152
 coturn_max_port: 65535
 coturn_listen_port: 3478
