--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -8,15 +8,16 @@
     state: 'directory'
     recurse: true
   with_items:
-    - { path: '{{ coturn_service_path }}', mode: '0755' }
-    - { path: '{{ coturn_cont_vol }}',     mode: '0750' }
+    - { path: '{{ coturn_service_path }}',    mode: '0755' }
+    - { path: '{{ coturn_cont_config_vol }}', mode: '0755' }
+    - { path: '{{ coturn_cont_certs_vol }}',  mode: '0750' }
   loop_control:
     loop_var: dir
 
 - name: Create coTURN server config
   template:
     src:   'turnserver.conf.j2'
-    dest:  '{{ coturn_cont_vol }}/turnserver.conf'
+    dest:  '{{ coturn_cont_config_vol }}/turnserver.conf'
     owner: 'dockremap'
     group: 'docker'
     mode:  0755
