--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -24,8 +24,10 @@ coturn_metrics_port: false
 coturn_metrics_port: 9641
 coturn_min_port: 49152
 coturn_max_port: 65535
-coturn_listen_port: 3478
-coturn_listen_interface: 'lo'
+coturn_stun_tcp_port: 3478
+coturn_stun_tcp_alt_port: 8080
+coturn_stun_tls_port: 5349
+coturn_stun_tls_alt_port: 8443
 coturn_admin_enabled: true
 coturn_admin_port: 8080
 coturn_admin_addr: '127.0.0.1'
