--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -23,8 +23,8 @@ coturn_domain: 'turn.example.org'
 coturn_external_ip: '{{ ansible_host }}'
 coturn_metrics_port: false
 coturn_metrics_port: 9641
-coturn_min_port: 49152
-coturn_max_port: 65535
+coturn_relay_min_port: 49152
+coturn_relay_max_port: 65535
 coturn_stun_tcp_port: 3478
 coturn_stun_tcp_alt_port: 8080
 coturn_stun_tls_port: 5349
