config: fix permissions of created folders
Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -6,11 +6,10 @@
     owner: '{{ dir.owner | default("dockremap") }}'
     group: 'docker'
     state: 'directory'
-    recurse: true
   with_items:
     - { path: '{{ coturn_service_path }}',    mode: '0755' }
     - { path: '{{ coturn_cont_config_vol }}', mode: '0755' }
-    - { path: '{{ coturn_cont_certs_vol }}',  mode: '0750' }
+    - { path: '{{ coturn_cont_certs_vol }}',  mode: '0750', owner: '{{ coturn_cont_uid }}' }
   loop_control:
     loop_var: dir
 
